[project]
name = "builder"
version = "0.1.0"
description = "Default template for PDM package"
authors = [
    {name = "Kyle Kestell", email = "kyle@kestell.org"},
]
dependencies = []
requires-python = "==3.12.*"
readme = "README.md"
license = {text = "BSD0"}


[project.optional-dependencies]
dev = [
    "markdown>=3.7",
    "httpx>=0.27.2",
    "flask>=3.0.3",
    "watchdog>=5.0.3",
    "python-slugify>=8.0.4",
    "python-recipy>=0.1.13",
    "rich>=13.9.3",
    "jinja2>=3.1.4",
]
[tool.pdm]
distribution = false
